# comment

./: .gitignore  CMakeLists.txt  README  abstractPageItem.cpp  abstractPageItem.h  abstractTool.cpp  abstractTool.h  annot_rm.1  comment.1  comment.cpp  commentItem.cpp  commentItem.h  config.cpp  config.h  gwenview_splittercollapser.cpp  gwenview_splittercollapser.h  hilightTool.cpp  hilightTool.h  hiliteItem.cpp  hiliteItem.h  inlineTextTool.cpp  inlineTextTool.h  linkLayer.cpp  linkLayer.h  linkLayer_p.h  linkTool.cpp  linkTool.h  mainWindow.cpp  mainWindow.h  myAction.h  myToolTip.cpp  myToolTip.h  pageBeginItem.cpp  pageBeginItem.h  pageNumberEdit.cpp  pageNumberEdit.h  pageTextLayer.cpp  pageTextLayer.h  pageView.cpp  pageView.h  (+44 more)
cmake/modules/: FindPoppler.cmake
debian/: changelog  control  copyright  files  manpage.1
